# Linux-basics-2020

./: Dockerfile  README.md  task1.txt  task2.txt
seminar01/: reports:10:МАРТЫНОВ.txt
seminar02/task02/: task02.sh
seminar02/task03/: task03.sh
seminar02/task04/: task04.sh
seminar02/task05/: task05.sh
seminar02/task06/: task06.sh
seminar02/task07/: task07.sh
seminar02/task08/: task08.sh
seminar02/task09/: task09.sh
seminar03/task01/: rnd.txt  task01.sh  test01.py
seminar03/task02/: task02.sh
seminar03/task03/: task03.sh
seminar03/task04/: task04.sh
seminar03/task05/: task05.sh
seminar03/task06/: task06.sh
seminar04/task01/: Makefile
seminar04/task01/src/: generator.sh
seminar04/task02/: CMakeLists.txt
seminar05/: task1.txt  task2.sh  task3.sh
